fix footer on mobile

--- a/_sass/fonts.scss
+++ b/_sass/fonts.scss
@@ -43,6 +43,7 @@ a {
 }
 
 .footer-link {
+  font-size: 14px;
   padding-bottom: 2px;
   background:
     linear-gradient(to right, rgba(0, 0, 0, .0), rgba(0, 0, 0, .0)),
@@ -53,8 +54,12 @@ a {
   transition: background-size 400ms;
 }
 
+@media (min-width: 768px) {
+  font-size: 16px;
+}
+
 .text-a:hover,
-.text-a:focus, 
+.text-a:focus,
 .footer-link:hover,
 .footer-link:focus {
   background-size: 0 0.15em, 100% 0.15em;
